--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <h1>{{ recipeInfo?.name }}</h1>
 
-<pre>{{ recipeInfo?.repositories | json }}</pre>
+Knowledge base: <a [href]="recipeInfo?.knowledgeBaseLink" target="_blank">{{ recipeInfo?.knowledgeBaseLink }}</a>
+
+<z-project-diagram [services]="recipeInfo.services"></z-project-diagram>
 
 <z-todos
   (add)="addTodo($event)"
