--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="zs-recipe-context">
 
     <zs-recipe-info
-      [intro]="'👏👏👏'"
+      [intro]="recipeInfo?.intro"
       [desc]="recipeInfo?.description">
     </zs-recipe-info>
 
