--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,7 +1,7 @@
 <div class="zs-todos">
 
   <input
-    class="zs-add-input"
+    class="zs-todo-add"
     type="text"
     [placeholder]="'Add item? Type and press enter.'"
     [(ngModel)]="addValue"
