--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,155 +1,2 @@
+@charset 'UTF-8';
 @import '~@zerops/zestratcss/zestrat.css';
-
-$_bu: 24px;
-
-$_contextWidth: 460px;
-$_contextContentMaxWidth: 400px;
-$_contextContentPadding: $_bu;
-$_itemMinHeight: $_bu;
-
-.zs-recipe {
-  display: grid;
-  grid-template-columns: $_contextWidth 1fr;
-}
-
-.zs-recipe-context {
-  padding-top: $_bu * 2;
-  height: 100vh;
-  overflow: auto;
-}
-
-.zs-recipe-desc,
-.zs-recipe-intro,
-.zs-todos {
-  display: block;
-  width: 100%;
-  max-width: $_contextContentMaxWidth;
-  padding: $_contextContentPadding;
-  margin: 0 auto;
-}
-
-.zs-recipe-intro {
-  font-size: 50px;
-}
-
-.zs-recipe-desc {
-  font-size: 18px;
-  line-height: 1.75em;
-}
-
-.zs-todos {
-  background: #f2faf8;
-  border-radius: 8px;
-}
-
-.zs-todo-add {
-  display: block;
-  width: 100%;
-  line-height: $_itemMinHeight;
-  padding: 4px;
-  border: 2px solid #ccc;
-  border-radius: 2px;
-  margin-bottom: $_bu;
-}
-
-.zs-todo-item {
-  position: relative;
-
-  padding-left: $_itemMinHeight * 1.5;
-  padding-right: $_itemMinHeight * 1.5;
-  margin: ($_bu * 0.5) 0;
-  display: block;
-  line-height: $_itemMinHeight;
-
-  &::after {
-    content: '';
-
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    display: block;
-    width: $_itemMinHeight;
-    line-height: $_itemMinHeight - 4px;
-    height: $_itemMinHeight;
-
-    border: 2px solid #50505017;
-    border-radius: 2px;
-    background: rgb(231, 231, 226);
-
-    text-align: center;
-
-    pointer-events: none;
-  }
-
-  &:hover {
-    .zs-todo-item-remove {
-      opacity: 1;
-    }
-
-    &::after {
-      border-color: #b5cfa9;
-    }
-  }
-
-  &.is-complete {
-    &::after {
-      content: '👍';
-      background: #68e429;
-    }
-  }
-}
-
-.zs-todo-text {
-  display: block;
-  width: 100%;
-}
-
-.zs-todo-item-edit {
-  display: block;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  line-height: $_itemMinHeight;
-
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid #ccc;
-}
-
-.zs-todo-item-remove {
-  position: absolute;
-  right: 0;
-  top: 0;
-
-  padding: 0;
-  margin: 0;
-  width: $_itemMinHeight;
-  height: $_itemMinHeight;
-  line-height: $_itemMinHeight;
-
-  border: none;
-  background: transparent;
-  opacity: 0;
-
-  text-align: center;
-
-  cursor: pointer;
-
-  &:hover {
-    opacity: 0.8;
-  }
-}
-
-.zs-todo-item-check {
-  position: absolute;
-  left: 0;
-  top: 0;
-
-  width: $_itemMinHeight;
-  height: $_itemMinHeight;
-
-  opacity: 0;
-
-  cursor: pointer;
-}
